Default api for 2.23 version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 }
             });
 
-            d2.init({ baseUrl: 'http://localhost:8080/dhis/api/24' })
+            d2.init({ baseUrl: 'http://localhost:8080/dhis/api' })
                 .then((d2) => {
                     d2.models.dataSets
                         .list()
